--- a/style.css
+++ b/style.css
@@ -1762,7 +1762,7 @@ a {
           top: 14px; } }
       #fullscreen-search form button[type="submit"] svg {
         fill: #adadad;
-        height: 31px;
+        height: 32px;
         padding: 3px;
         width: 32px; }
         @media (max-width: 768px) {
@@ -1772,7 +1772,8 @@ a {
           #fullscreen-search form button[type="submit"] svg {
             display: none; } }
         #fullscreen-search form button[type="submit"] svg:last-child {
-          display: none; }
+          display: none;
+          height: 34px; }
           #fullscreen-search form button[type="submit"] svg:last-child path {
             -webkit-animation: spin 2s linear infinite;
             -moz-animation: spin 2s linear infinite;
